# mbdm

./: .gitignore  CMakeLists.txt  build.bat  clean.bat  version.txt
old/: mbdm.old.cpp
src/: common.h  config.h.in  custom.cpp  custom.h  mbdm.cpp
src/base_components/: base_panel.cpp  base_panel.h  base_window.cpp  base_window.h
src/core/: core.cpp  core.h  global_kb_handler.cpp  global_kb_handler.h  simulated_desktop.cpp  simulated_desktop.h  simulated_desktops_manager.cpp  simulated_desktops_manager.h
src/utils/: paint_utils.cpp  paint_utils.h
src/window_components/: button.cpp  button.h  panel.cpp  panel.h  scrollable_panel.cpp  scrollable_panel.h  scrollbar.cpp  scrollbar.h  scrollbar_old.cpp  scrollbar_old.h
src/window_components/panels/: keyboard_settings_panel.cpp  keyboard_settings_panel.h
src/windows/: current_simulated_desktop_window.cpp  current_simulated_desktop_window.h  debug_window.cpp  debug_window.h  settings_window.cpp  settings_window.h
